# haystack_bio

./:  .dockerignore  .dockerignore  .gitignore  .travis.yml  DOCKER_FILE_HAYSTACK  Dockerfile  INSTALL_HAYSTACK.py  LICENSE  MANIFEST.in  README.md  README.rst  create_binary_cygwin.sh  create_binary_darwin.sh  create_binary_unix.sh  docker_test.sh  download_genome.spec  haystack_download_genome.py  haystack_hotspots.darwin.spec  haystack_hotspots.py  haystack_hotspots.unix.spec  haystack_motifs.py  haystack_motifs.spec  haystack_pipeline.py  haystack_pipeline.spec  haystack_tf_activity_plane.darwin.spec  haystack_tf_activity_plane.py  haystack_tf_activity_plane.spec  haystack_tf_activity_plane.unix.spec  manual_build.sh  requirements.txt  setup.py  setup_bioconda.py  travis_before_install.sh
dependencies/meme_4.10.0/: ARCHIVE_DATE  ARCHIVE_REVISION  AUTHORS  INSTALL  Makefile.am  Makefile.in  MemeSuite.properties.in  README  aclocal.m4  build.xml  config.h.in  configure  configure.ac  website.mk
dependencies/meme_4.10.0/doc/: Makefile.am  Makefile.in  alphabets.html  alphtype.html  ama-qvalues.html  ama.html  ame.html  authors.html  beadstring.html  beeml2meme.html  bfile-format.html  centrimo.html  ceqlogo.html  chen2meme.html  cite.html  clustalw-format.html  clustalw2fasta.html  clustalw2phylip.html  compute-prior-dist.html  copyright.html  copyright.html.in  create-priors.html  dmix-format.html  download.html  draw-mhmm.html  dreme-tutorial.html  dreme.html  fasta-format.html  fasta-get-markov.html  fasta-io.html  fasta-subsample.html  fimo.html  fitevd.html  gendb.html  general-faq.html  getsize.html  glam2.html  glam2_alphabet.html  glam2_tut.html  glam2format.html  (+54 more)
dependencies/meme_4.10.0/etc/: AME_config.xml.in  CENTRIMO_config.xml.in  DREME_config.xml.in  FIMO_config.xml.in  GLAM2SCAN_config.xml.in  GLAM2_config.xml.in  GOMO_config.xml.in  MAST_config.xml.in  MCAST_config.xml.in  MEMECHIP_config.xml.in  MEME_config.xml.in  Makefile.am  Makefile.in  SPAMO_config.xml.in  TOMTOM_config.xml.in  ame_template.css  ame_template.html  ame_template.js  centrimo_graph.js  centrimo_template.html  centrimo_template.js  db_general.csv  delay_draw.js  dreme-to-html.xsl  dreme-to-text.xsl  fimo-to-gff3.xsl  gomo-to-html.xsl  job_status.tmpl  mast-to-html.css  mast-to-html.js  mast-to-html.xsl  meme-chip_template.css  meme-chip_template.html  meme-chip_template.js  meme.css  meme_template.css  meme_template.html  meme_template.js  motif_logo.js  spamo-to-html.xsl  (+6 more)
dependencies/meme_4.10.0/scripts/: ExecUtils.pm  Globals.pm.in  HtmlMonolithWr.pm  HypergeometricDynProg.pm  JsonWr.pm  Makefile.am  Makefile.in  MemeSAX.pm  MemeWebUtils.pm.in  MotifUtils.pm  ame_webservice.pl.in  beeml2meme.pl.in  centrimo_webservice.pl.in  dependencies.pl  dreme.py.in  fasta-hamming-enrich.py.in  fasta-shuffle-letters.pl.in  fasta-subsample.pl.in  glam2_webservice.pl.in  glam2html.py.in  glam2scan2html.py.in  gomo_webservice.pl.in  hypergeometric.py  jaspar2meme.pl.in  lrun.pl.in  mast_webservice.pl.in  matrix2meme.pl.in  meme-chip.pl.in  meme-chip_webservice.pl.in  meme-rename.pl.in  meme_webservice.pl.in  meme_xml_to_html.pl.in  metatest.pl.in  nmica2meme.pl.in  rna2meme.pl.in  sites2meme.pl.in  taipale2meme.pl.in  texit.pl.in  uniprobe2meme.pl.in  update-plot-usage.pl.in  (+1 more)
dependencies/meme_4.10.0/src/: Makefile.am  Makefile.in  alignment.c  alphabet.c  alphabet.h  ama.c  ame.c  ame.h  array.c  array.h  background.c  centrimo.c  ceqlogo.c  ceqlogo.h  cisml-sax.c  cisml.c  cisml.h  compute-prior-dist.c  compute-uniform-priors.c  create-priors.c  data-block-reader.c  data-block-reader.h  display.c  eps2png.c  eps2png.h  exec_parallel.c  fasta-get-markov.c  fasta-io.c  fasta-io.h  fimo.c  fisher_exact.c  fisher_exact.h  fitevd.c  fitevd.h  gendb.c  general.h  glam2_output.c  gomo.c  heap.h  init.c  (+67 more)
dependencies/meme_4.10.0/tests/: Makefile.am  Makefile.in
dependencies/meme_4.10.0/website/: canvas-test.html  index.html  web.xml
dependencies/meme_4.9.1/: ARCHIVE_REVISION  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  libtool
dependencies/meme_4.9.1/doc/: Makefile  Makefile.in  alphabets.html  ama-qvalues.html  ama.xml  beeml2meme.html  dreme-tutorial.html  dreme.html  fasta-get-markov.xml  fasta-subsample.html  meme-chip.html  meme-format.html  meme-install.html  meme-rename.html  meme-suite-docs.css  meme.html  meme2meme.html  mhmmscan.html  miao.xml  overview.html  psp-gen.xml  shadow.xml  spamo.html
dependencies/meme_4.9.1/etc/: Makefile  ame_template.html  ame_template.js  block-diagram.xsl  constants.js.in  dreme-to-html.css  dreme-to-html.js  dreme-to-text.xsl  fimo-to-gff3.xsl  fimo-to-text.xsl  fimo_config.xml.in  mcast-to-wiggle.xsl  meme-chip_config.xml.in  meme-chip_template.css  meme-chip_template.html  meme-to-html.xsl  meme.css  meme.doc  spamo-to-html.css  spamo-to-html.js  spamo-to-html.xsl  spamo_config.xml.in  template.eps  tomtom-to-html.xsl
dependencies/meme_4.9.1/scripts/: CombDynProg.pm  DiffXML.pm  ExecUtils.pm  JsonRdr.pm  JsonWr.pm  Makefile  Makefile.am  Makefile.in  MemeSAX.pm  MotifInDremeXML.pm  MotifInMemeXML.pm  MotifUtils.pm  PriorUtils.pm  ReadFastaFile.pm  centrimo_webservice.pl.in  chen2meme.pl.in  dependencies.pl  dreme_webservice.pl.in  fasta-center.pl.in  fasta-dinucleotide-shuffle.py.in  fasta-enriched-center.pl.in  fasta-fetch.pl.in  fasta-hamming-enrich.py.in  fasta-make-index.pl.in  fasta-most.pl.in  fimo_webservice.pl.in  get_db_csv.pl.in  glam2scan_webservice.pl.in  gomo_webservice.pl.in  hypergeometric.py  iupac2meme.pl.in  lrun.csh.in  mailer.pl.in  mcast_webservice.pl.in  meme-chip.pl.in  meme-chip_webservice.pl.in  meme2meme.pl.in  mhmm2html.pl.in  plot-usage  plotgen  (+9 more)
dependencies/meme_4.9.1/src/: Makefile  Makefile.am  Makefile.in  alignment.h  alphabet.h  alphtype.c  ama.c  ama_scan.h  ame.h  array-list.c  array.c  background.h  banner.c  beadstring.c  beadstring.h  binomial.c  binomial.h  branching_search.c  buffer.c  buffer.h  build-hmm.c  build-hmm.h  centrimo.c  ceqlogo.c  ceqlogo.h  cisml.h  (+130 more)
(+1414 files in other folders)
